--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@line/bot-sdk": "^6.0.1",
     "express": "^4.16.3",
+    "http": "0.0.0",
     "request": "^2.85.0"
   }
 }
